# RedisJumphash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jumphash.c  redismodule.h
CMake/Modules/: FindXXHASH.cmake
